{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 31,
  "lineage": "5e23e7fa-4e88-dfd1-eec3-332c9be86aa1",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-grafana-access",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-08-16T23:45:05.465-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/prime-rainfall-271007/global/firewalls/allow-grafana-access",
            "log_config": [],
            "name": "allow-grafana-access",
            "network": "https://www.googleapis.com/compute/v1/projects/prime-rainfall-271007/global/networks/default",
            "priority": 1000,
            "project": "prime-rainfall-271007",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prime-rainfall-271007/global/firewalls/allow-grafana-access",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-grafana-access"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http-server",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-08-16T23:28:27.993-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/prime-rainfall-271007/global/firewalls/default-allow-http",
            "log_config": [],
            "name": "default-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/prime-rainfall-271007/global/networks/default",
            "priority": 1000,
            "project": "prime-rainfall-271007",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prime-rainfall-271007/global/firewalls/default-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20200805",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/prime-rainfall-271007/zones/europe-west1-b/disks/grafana-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/prime-rainfall-271007/zones/europe-west1-b/instances/grafana-instance",
            "instance_id": "6626536431346489854",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "eY0O12ut3XE=",
            "metadata_startup_script": "sudo apt-get install -y apt-transport-https \u0026\u0026 sudo apt-get update \u0026\u0026 sudo apt-get install -y apt-transport-https \u0026\u0026 sudo apt-get install -y software-properties-common wget \u0026\u0026 wget -q -O - https://packages.grafana.com/gpg.key | sudo apt-key add - \u0026\u0026 echo 'deb https://packages.grafana.com/oss/deb stable main' | sudo tee -a /etc/apt/sources.list.d/grafana.list \u0026\u0026 sudo apt-get update \u0026\u0026 ech [...]
            "name": "grafana-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.189.231.97",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/prime-rainfall-271007/global/networks/default",
                "network_ip": "10.132.15.216",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/prime-rainfall-271007/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "prime-rainfall-271007"
              }
            ],
            "project": "prime-rainfall-271007",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/prime-rainfall-271007/zones/europe-west1-b/instances/grafana-instance",
            "tags": [
              "allow-grafana-access",
              "http-server"
            ],
            "tags_fingerprint": "QqpRC9PYiRs=",
            "zone": "europe-west1-b"
          }
        }
      ]
    }
  ]
}